deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vite-app
  namespace: vite-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vite-app
  template:
    metadata:
      labels:
        app: vite-app
    spec:
      containers:
      - name: vite-app
<<<<<<< HEAD:deploy/deployment.yaml
        image: ghcr.io/gmarcha/vite-app:1.0.1 # {"$imagepolicy": "vite-app:vite-app"}
=======
        image: ghcr.io/gmarcha/vite-app:0.1.2 # {"$imagepolicy": "vite-app:vite-app"}
>>>>>>> 940962682d138433dd62521fc2af65ad28c97cba:deploy/app/deployment.yaml
        ports:
        - name: http
          containerPort: 3000
      imagePullSecrets:
      - name: ghcr
