deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vite-app
  namespace: vite-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: gmarcha.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: vite-app
            port:
              name: http
  tls:
  - secretName: gmarcha.com-tls
    hosts:
    - gmarcha.com
